fixed spacing

--- a/css/eat.css
+++ b/css/eat.css
@@ -3,7 +3,7 @@ input {
 }
 
 main { 
-  padding: 0 80px 80px 80px;
+  padding: 0 50px 50px 50px;
 }
 
 h2 {
@@ -20,13 +20,12 @@ hr {
   border: 0;
   width: 100%;
   background-color: black;
-  /* margin: 40px auto; */
 }
 
 header { 
   line-height: 50px;
   margin-top: 80px;
-  padding: 80px 80px 0px 80px;
+  padding: 50px;
 }
 
 button:hover {
@@ -45,7 +44,7 @@ button:hover {
 }
 
 .filter-container { 
-  margin-top: 50px;
+  /* margin-top: 50px; */
   width: 100%;
 }
 
@@ -54,10 +53,18 @@ button:hover {
 }
 
 .filter-button { 
+  width: max-content;
   background-color: white;
-  color: grey;
   padding: 0;
   margin-bottom: 20px; 
+}
+
+.filter-button i { 
+  color: grey;
+}
+
+.filter-button {
+  color: black;
 }
 
 .ratings {
@@ -70,7 +77,7 @@ button:hover {
 }
 
 .grid {
-  margin: 50px 0;
+  margin: 20px 0;
   display: grid;
   grid-gap: 30px;
   grid-template-columns: repeat(auto-fill, minmax(277px, 1fr));
@@ -154,6 +161,11 @@ button:hover {
   overflow: auto; 
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4); 
+}
+
+.checkboxes { 
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 
 .modal-content {
@@ -333,6 +345,10 @@ button:hover {
     width: 50%;
     align-items: flex-start;
   }
+
+  main, header { 
+    padding: 0 80px 80px 80px; 
+  }
 }
 
 @media screen and (min-width: 996px) {
@@ -340,6 +356,18 @@ button:hover {
     width: 66%;
     flex-direction: row;
     justify-content: space-around;
+  }
+
+  .grid {
+    margin: 50px 0;
+  }
+
+  main, header { 
+    padding: 80px 80px 0px 80px; 
+  }
+
+  .checkboxes { 
+    display: block;
   }
 
   .bottom-row { 
@@ -369,8 +397,8 @@ button:hover {
   }
 
   .filter-container { 
-    margin-top: 50px;
-    width: 5%;
+    /* margin-top: 50px; */
+    width: 0%;
   }
 
   .filter-button { 
