--- a/css/globals.css
+++ b/css/globals.css
@@ -244,7 +244,7 @@ button:hover {
 }
 
 :focus {
-  border: 2px solid blue;
+  border: 2px solid var(--purple);
 }
 
 @media screen and (min-width: 600px) {
